--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <form>
   <input type="text" name="Email" value="" placeholder="Email">
   <input type="text" name="GitHub Username" value="" placeholder="GitHub Username">
@@ -16,11 +18,5 @@
   </fieldset>
     <input id="Remember Me" type="checkbox" name="Remember Me" value="Remember Me">
     <label for="RememberMe">Remember Me</label<br>
-
-
-
-
-
-
-
 </form>
+</html>
