--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <input type="text" name="GitHub Username" value="" placeholder="GitHub Username">
   <input type="text" name="Password" value="" placeholder="Password">
   <button type="submit">Submit</button>
+  <label for="submit">Click to submit credentials</label<br>
   <fieldset>
   <legend>Package</legend>
     <input id="Enterprise" type="radio" name="Package" value="Enterprise">
